RESOLVED FIXED114311
REGRESSION (142152): ensure we skip past out-of-flow objects when detecting whitespace to ignore after leading empty inlines
https://bugs.webkit.org/show_bug.cgi?id=114311
Summary REGRESSION (142152): ensure we skip past out-of-flow objects when detecting w...
Emil A Eklund
Reported 2013-04-09 15:54:11 PDT
Since r142152 we incorrectly layout out of flow content inside an inline-blocks with vertical-align. What steps will reproduce the problem? 1. Go to http://join.iatn.net/ 2. Notice in 26.0.1410.43 that the placeholder text shows up unusually high in our boxes. (Note that this isn't actual HTML5 placeholder attribute text, but a custom development to support all browsers.) Prior to this version of Chrome, it rendered perfectly fine. The second screenshot shows how it renders in Safari 6.0.1 (8536.26.14), and that's also how it looked prior to this release of Chrome. Originally reported for chromium in: https://code.google.com/p/chromium/issues/detail?id=226246
Attachments
minimal test case (386 bytes, text/html)
2013-04-09 15:54 PDT, Emil A Eklund
no flags
Patch (6.83 KB, patch)
2013-04-10 13:34 PDT, Robert Hogan
no flags
Patch (6.92 KB, patch)
2013-04-10 14:21 PDT, Robert Hogan
no flags
Emil A Eklund
Comment 1 2013-04-09 15:54:30 PDT
Created attachment 197184 [details] minimal test case
Robert Hogan
Comment 2 2013-04-10 13:34:20 PDT
Robert Hogan
Comment 3 2013-04-10 14:21:28 PDT
WebKit Commit Bot
Comment 4 2013-04-11 12:15:47 PDT
Comment on attachment 197404 [details] Patch Clearing flags on attachment: 197404 Committed r148223: <http://trac.webkit.org/changeset/148223>
WebKit Commit Bot
Comment 5 2013-04-11 12:15:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.